@startuml Klassendiagramm_Final_ohne_User

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classBackgroundColor #F7F7F7
skinparam classBorderColor #888888
skinparam arrowColor #555555
skinparam packageBackgroundColor #EFEFEF
skinparam packageBorderColor #AAAAAA

package "Präsentationsschicht (Browser / NiceGUI Engine)" #E8F4FD {
  note "Thin Client\nKeine eigenen Klassen\n(Vue.js + Quasar via NiceGUI)" as N1
}

package "Anwendungslogik (Server-seitiges Frontend)" #EAF7EA {

  class TodoList {
    - id : int
    - name : str
    - todos : list[Todo]
    --
    + add_todo(todo : Todo) : void
    + remove_todo(todo_id : int) : void
    + get_all_todos() : list[Todo]
    + filter_todos(status : str, priority : str) : list[Todo]
  }

  class Todo {
    - id : int
    - description : str
    - priority : str
    - due_date : str
    - status : str
    - created_at : datetime
    - todo_list_id : int
    --
    + toggle_status() : void
    + is_overdue() : bool
  }

  TodoList *-- "0..*" Todo : enthält

}

package "Persistenzschicht (SQLite via SQLAlchemy ORM)" #FEF9E7 {

  class TodoListHandler {
    - session : sqlalchemy.orm.Session
    --
    + save(todolist : TodoList) : void
    + delete(todolist_id : int) : void
    + get_by_id(todolist_id : int) : TodoList
    + get_all() : list[TodoList]
    + update(todolist_id : int) : void
    + create_list(name : str) : void
  }

  class TodoHandler {
    - session : sqlalchemy.orm.Session
    --
    + save(todo : Todo) : void
    + delete(todo_id : int) : void
    + get_by_id(todo_id : int) : Todo
    + get_all() : list[Todo]
    + update(todo_id : int, description : str, priority : str, due_date : str) : void
    + get_todos_for_list(todolist_id : int, status_filter : str, priority_filter : str) : list[Todo]
    + toggle_status(todo_id : int) : void
  }

}

TodoListHandler ..> TodoList : verwaltet
TodoHandler ..> Todo : verwaltet

@enduml
